Fix: dashboard init guard + /api/env timeout (no infinite spinner)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>LogicPals — Regular Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Outfit:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js">
-  function dlog(){ if(DEBUG) console.log.apply(console, arguments); }
-  function dwarn(){ if(DEBUG) console.warn.apply(console, arguments); }
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <style>
     :root{--primary:#6c5ce7;--accent:#feca57;--text:#f0f0f5;--muted:#5d5f7e;--text2:#9899b3;--bg:#0c0e1a;--card:rgba(20,24,52,.55);--border:rgba(255,255,255,.06);--good:#00d2a0;--bad:#ff6b6b;--radius:20px;--radius2:14px;--max:1100px;--tap:44px;--font:'Plus Jakarta Sans',-apple-system,sans-serif;--font-d:'Outfit',-apple-system,sans-serif;--glow:rgba(108,92,231,.35);--glow2:rgba(0,210,160,.25);--as:rgba(108,92,231,.12);--ys:rgba(254,202,87,.10);}
     *{box-sizing:border-box;}html,body{height:100%;}
@@ -231,12 +228,32 @@
   const CAT_LABELS={logic:'Logic & Reasoning',arithmetic:'Arithmetic','word-problem':'Word Problems',pattern:'Pattern Recognition',algebra:'Algebra',geometry:'Geometry'};
 
   async function getEnv(){
-    if(window.__LP_ENV?.SUPABASE_URL)return window.__LP_ENV;
-    const r=await fetch('/api/env',{cache:'no-store',credentials:'same-origin'});
-    if(!r.ok)throw new Error('/api/env: '+r.status);
-    const d=await r.json();
-    const env={SUPABASE_URL:d.SUPABASE_URL||d.supabaseUrl||d.url,SUPABASE_ANON_KEY:d.SUPABASE_ANON_KEY||d.supabaseAnonKey||d.anonKey};
-    window.__LP_ENV=env;return env;
+    if(window.__LP_ENV?.SUPABASE_URL) return window.__LP_ENV;
+
+    const ctrl = new AbortController();
+    const t = setTimeout(()=>ctrl.abort(), 5000);
+
+    let r;
+    try{
+      r = await fetch('/api/env', {cache:'no-store', credentials:'same-origin', signal: ctrl.signal});
+    } finally {
+      clearTimeout(t);
+    }
+
+    if(!r.ok) throw new Error('/api/env: '+r.status);
+
+    const d = await r.json();
+    const env = {
+      SUPABASE_URL: d.SUPABASE_URL || d.supabaseUrl || d.url,
+      SUPABASE_ANON_KEY: d.SUPABASE_ANON_KEY || d.supabaseAnonKey || d.anonKey
+    };
+
+    if(!env.SUPABASE_URL || !env.SUPABASE_ANON_KEY){
+      throw new Error('Missing Supabase config from /api/env (SUPABASE_URL / SUPABASE_ANON_KEY)');
+    }
+
+    window.__LP_ENV = env;
+    return env;
   }
 
   async function init(){
@@ -245,10 +262,6 @@
     if(!env.SUPABASE_URL||!env.SUPABASE_ANON_KEY){setStatus('bad','Config missing');showAuth();return;}
 
     const sb=supabase.createClient(env.SUPABASE_URL,env.SUPABASE_ANON_KEY,{auth:{storageKey:STORAGE_KEY,persistSession:true,autoRefreshToken:true,detectSessionInUrl:true}});
-
-  // Debug hook (no PII). Use in console: await window.LP_SB?.auth.getSession()
-  if(DEBUG) window.LP_SB = sb;
-
     // QC/debug handle (does NOT change security; exposes existing client instance)
     window.__LP_SB = sb;
 
@@ -302,7 +315,7 @@
         if(data&&data.length)attempts=data;
       }catch(_){}
     }
-    dlog('[Dashboard] Loaded',attempts.length,'attempts,',attempts.filter(wasSolved).length,'solved');
+    console.log('[Dashboard] Loaded',attempts.length,'attempts,',attempts.filter(wasSolved).length,'solved');
 
     // Fetch school leaderboard
     let schoolPeers=[];
@@ -504,7 +517,21 @@
   $('olymModal').addEventListener('click',e=>{if(e.target.id==='olymModal')$('olymModal').style.display='none';});
   window.addEventListener('pageshow',e=>{if(e.persisted)location.reload();});
 
-  if(document.readyState==='loading')document.addEventListener('DOMContentLoaded',init);else init();
+  const runInit = () => init().catch((e)=>{
+    console.error(e);
+    try{
+      setStatus('err', (e && e.message) ? e.message : String(e));
+      const ls = $('loadingState'); const ct = $('content'); const an = $('authNotice');
+      if(ct) ct.style.display='none';
+      if(ls) ls.style.display='none';
+      if(an){
+        an.style.display='block';
+        an.innerHTML = '<div class="card"><h3>Dashboard failed to load</h3><p class="muted">'+escapeHtml((e&&e.message)?e.message:String(e))+'</p><p class="muted">If this happened right after a deploy or env-var change, do a Vercel Redeploy (Production) so the new Environment Variables are applied.</p></div>';
+      }
+    }catch(_){}
+  });
+
+  if(document.readyState==='loading')document.addEventListener('DOMContentLoaded',runInit);else runInit();
 })();
 </script>
 </body>
